# copilot-context

./: .gitignore  Cargo.toml  LICENSE  README.md  agent.md  context.toml  context.yaml  release.toml
.github/workflows/: build-test.yml  release.yml
src/: clean.rs  combine.rs  config.rs  copy.rs  fetch.rs  git.rs  main.rs  sh.rs
