[package]
name = "copilot-context"
version = "0.1.0"
edition = "2021"

description = "Curated, reproducible local context folder generator for Copilot and LLM tools."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
git2 = "0.18"
walkdir = "2.4"
ignore = "0.4"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
thiserror = "1.0"
log = "0.4"
