[package]
name = "copilot-context"
version = "0.1.0-alpha.10"
edition = "2021"

description = "Curated, reproducible local context folder generator for Copilot and LLM tools."
repository = "https://github.com/ograycode/copilot-context"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
git2 = "0.18"
walkdir = "2.4"
ignore = "0.4"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
thiserror = "1.0"
log = "0.4"
toml = "0.8.22"
glob = "0.3.2"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
